# passthrough

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
about/: index.html
assets/diagrams/: passthrough_high_level.drawio  process_elem_flow_old
background/: index.html
background/template-processing/: index.html
docs/: about.md  index.md
docs/assets/diagrams/: passthrough_product_hierarchy.drawio  passthrough_template_flow.drawio  process_elem_flow.drawio
docs/background/: index.md  template-processing.md
docs/get-started/: installation.md  next-steps.md  tutorial-part-one.md  tutorial-part-two.md  tutorial.md
docs/overrides/partials/: nav.html  toc.html
docs/reference/: index.md  python-api.md
docs/reference/ptl/: index.md  xpath.md
docs/src/get-started/: processor.py  result_1.xml  sample_input_2.xml
docs/stylesheets/: extra.css
get-started/installation/: index.html
get-started/next-steps/: index.html
get-started/tutorial/: index.html
how-to/: index.html
how-to/fill-format/: index.html
how-to/multi-source-inheritance/: index.html
overrides/partials/: nav.html
reference/: index.html
reference/extension-api/: index.html
reference/ptl/: index.html
reference/ptl/properties/: index.html
reference/ptl/xpath/: index.html
reference/python-api/: index.html
search/: search_index.json
src/get-started/: result_2.xml  sample_input_1.xml  template.xml
src/passthrough/: __init__.py  exc.py  ext.py  label.py  label_tools.py  state.py  template.py  util.py
src/passthrough/extensions/: __init__.py
src/passthrough/testing/: pan_raw_sc_r00_observation_20201110t221840.359z.xml  pp-200b_sample_base_wip.xml  pttesting.py
(+21 files in other folders)
