[tool.poetry]
name = "passthrough"
version = "0.3.2"
description = "Passthrough - Template-Driven PDS4 Data Product Generation"
authors = ["Ariel Ladegaard <arl13@aber.ac.uk>"]
license = "MIT"
repository = "https://github.com/ExoMars-PanCam/passthrough"
keywords = ["PDS", "PDS4", "template", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^3.7.3", python = "<3.8"}  # fallback backport for Python 3.6/3.7
lxml = "^4.5.0"
#numpy = "^18.0.0"

pds4_tools = {version = "^1.2", optional = true}

[tool.poetry.extras]
pds4_tools = ["pds4_tools"]

[tool.poetry.dev-dependencies]
pytest = ">=3.5"
black = "^20.8b1"
isort = "^5.8.0"
mkdocs-material = "^7.1.3"
mkdocs-section-index = "^0.3.0"
mkdocstrings = "^0.15.0"

[tool.poetry.plugins."passthrough.extensions"]
"exm" = "passthrough.extensions.exm"
"file" = "passthrough.extensions.file"
"pt" = "passthrough.extensions.pt"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | build
    | dist
  )/
)
'''
experimental-string-processing = true

[tool.isort]  # black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
